# logicGates

./: Makefile  README.md  logic_circuits.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_logic_circuits.py
src/logic_gates/: gates.py
tests/: __init__.py  test_gates.py
