[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logic_circuits"
version = "0.1.0"
description = "Logic gate and arithmetic circuit implementations"
requires-python = ">=3.7"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"